--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js",
-    "test": "mocha --reporter list app/tests/api.test"
+    "test": "mocha --reporter list app/tests/api.test --timeout 10000"
   },
   "author": "Hamza El Bouatmani",
   "license": "ISC",
